infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    # cert-manager will issue a Let's Encrypt cert for this host automatically
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # ArgoCD is running in insecure mode so ingress talks HTTP to it
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.fiddlestick.org
      secretName: argocd-tls
  rules:
    - host: argocd.fiddlestick.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
